Fixed hidden x overflow with nav on mobile

--- a/style.css
+++ b/style.css
@@ -22,6 +22,10 @@ nav {
     background-color: #114254;
 }
 
+nav a:hover, h3:hover {
+    text-shadow: 0 0 1.5px #FFFFFF;
+}
+
 .nav-logo {
     font-size: 1.2rem;
     cursor: pointer;
@@ -78,18 +82,20 @@ nav {
 
 footer {
     background-color: #114254;
-    position: absolute;
+    padding-top: 1000;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 60px;
     text-align: right;
-    float: right;
     padding: 10px 30px;
 }
 
-@media screen and (max-width:700px) {
-    body {
+@media screen and (max-width:769px) {
+    html, body {
         overflow-x: hidden;
+        height: 100%;
+        position: relative;
     }
     .nav-links {
         position: absolute;
